기존 액티비티에서 새로운 액티비티를 띄우고, 새 액티비티에서 정보를 가져온 다음에, 새 액티비티를 닫고 기존 액티비티에 정보를 가져오는법 구현

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".maps.SearchShopToJoinActivity" />
-        <activity android:name=".JoinFormActivity"></activity>
+        <activity android:name=".JoinFormActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
