--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.0.1'
+    compile 'com.android.support:design:25.1.0'
     compile group: 'com.github.kevinsawicki', name: 'http-request', version: '5.4.1'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.1'
