--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -21,7 +22,8 @@
         </activity>
         <activity android:name=".maps.SearchShopToPointActivity" />
         <activity android:name=".SearchExampleActivity" />
-        <activity android:name=".maps.SearchPointToAddress"></activity>
+        <activity android:name=".AddressListActivity" />
+        <activity android:name=".SearchToMapActivity"></activity>
     </application>
 
 </manifest>
